--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="l-header">
-<%= link_to "Hello Header!", root_path, class: 'l-header__link' %>
+<%= link_to "Here's the Header, yo!", root_path, class: 'l-header__link' %>
 </div>
 
 <%= render 'shared/flash' %>
