spec comment out and yarn lint

--- a/app/javascript/application/styles/4_layout/header.css
+++ b/app/javascript/application/styles/4_layout/header.css
@@ -14,6 +14,6 @@
 
   & .l-header__button {
     color: var(--color-black);
-    font-size: var(--font-size-sm)
+    font-size: var(--font-size-sm);
   }
 }
