--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,11 @@
-<h1>Wassup, <%= current_user.email %>.</h1>
+<h3>Hi, <%= current_user.first_name %>.</h3>
+</br>
+<p>So far, you have reviewed <%= @scores.count %> application(s):</p>
+<% @scores.each do |score| %>
+	<p><%= score.applicant.first_name.capitalize %>
+	<%= score.applicant.last_name %></p>
+<% end %>
+<p>To review another, click below!</p>
+<%= button_to "Review Application", new_page_path, method: :get %>
+
+
