--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 </br>
 <p>So far, you have reviewed <%= @scores.count %> application(s):</p>
 <% @scores.each do |score| %>
-	<p><%= score.applicant.first_name.capitalize %>
+	<p><%= score.applicant.first_name %>
 	<%= score.applicant.last_name %></p>
 <% end %>
 <p>To review another, click below!</p>
