--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,1 +1,4 @@
 <p>Sup yo! I'm new!</p>
+<p><%= @applicant.first_name %></p>
+<p><%= @applicant.last_name %>
+<p>link_to Read their application, <%= @applicant.link %></p>
