--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,8 +2,7 @@
 </br>
 <p>So far, you have reviewed <%= @scores.count %> application(s):</p>
 <% @scores.each do |score| %>
-	<p><%= score.applicant.first_name %>
-	<%= score.applicant.last_name %></p>
+	<p>- <%= score.applicant.first_name %> <%= score.applicant.last_name %></p>
 <% end %>
 <p>To review another, click below!</p>
 <%= button_to "Review Application", new_page_path, method: :get %>
