applicant unavailable if being reviewed

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,6 +5,6 @@
 	<p>- <%= score.applicant.first_name %> <%= score.applicant.last_name %></p>
 <% end %>
 <p>To start a new review, click below!</p>
-<%= button_to "Review Application", new_page_path, method: :get %>
+<%= button_to "Review New Application", new_page_path, method: :get %>
 
 
