--- a/app/javascript/application/styles/2_elements/forms.css
+++ b/app/javascript/application/styles/2_elements/forms.css
@@ -4,14 +4,23 @@ fieldset {
   padding: 0;
 }
 
+.list {
+  font-size: 0.5rem;
+  border-color: black;
+}
+
+
 input[type="text"],
 textarea,
-select {
+.select {
   box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.14);
   background-color: var(--color-off-white);
   border-radius: 5px;
+  color: green;
 }
 
 label {
   padding-right: var(--spacing-xxs);
 }
+
+
