--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -4,11 +4,15 @@
 <% @scores.each do |score| %>
 	<p>- <%= score.applicant.first_name %> <%= score.applicant.last_name %></p>
 <% end %>
-<select>
-    <%= options_for_select @applicants.collect{|applicant| [applicant.last_name, applicant.id]} %>
-</select>
-<br>
-<p>To pick a suggested applicant, click below!</p>
-<%= button_to "Review Suggested Application", new_score_path, method: :get %>
+<p> Choose from list:</p>
+  <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+    <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+    <%= submit_tag 'Choose' %>
+  <% end %>
+<br><br>
+<p>Or</p>
+<%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get %>
+
+
 
 
