--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -5,9 +5,16 @@
 <% else %>
   <p>You have reviewed <%= @scores.count %> applications:</p>
 <% end %>
-<% @scores.each do |score| %>
-	<p>- <%= score.applicant.first_name %> <%= score.applicant.last_name %></p>
-<% end %>
+<table>
+  <% @scores.each do |score| %>
+    <tr>
+        <td><%= score.applicant.first_name %></td>
+        <td><%= score.applicant.last_name %></td>
+        <td><%= link_to "Edit", edit_score_path(score) %></td>
+    </tr>
+  <% end %>
+</table>
+<br>
 <p> Choose from list:</p>
   <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
     <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
@@ -16,7 +23,3 @@
 <br><br>
 <p>Or</p>
 <%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get %>
-
-
-
-
