flash alert styling and function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body class="l-body">
     <%= render "shared/header" %>
+    <%= render "shared/flash"%>
     <div class="l-container l-container--centered">
       <%= yield %>
     </div>
