--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -1,3 +1,10 @@
+<% if @score.errors.any? %>
+  <% @score.errors.full_messages.each do |message| %>
+    <div class="c-flash c-flash--alert">
+      <li><%= message %></li>
+    </div>
+  <% end %>
+<% end %>
 <p><%= @score.applicant.first_name %> <%= @score.applicant.last_name %></p>
 <% if @score.applicant.users.count == 0 %>
     <p>You will be the first to score them.</p>
@@ -10,21 +17,23 @@
 <p>1. <%= link_to "View their application in a new tab.", @score.applicant.link,  target: :_blank %></p>
 <p>2. Fill out the score fields below.</p>
 <p>3. Press the "submit scores" button</p>
-<%= form_for @score, as: :score, url: score_path do |f| %>
-    <% points = [0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5] %>
-    <% ten_points = [0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10] %>
-    <%= check_box_tag(:mccoy, 1, f.object.mccoy?) %>
-    <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)") %><br><br>
-    <%= f.label :financial, "Financial Need" %><br>
-    <%= f.select :financial, points, prompt: true %><br><br>
-    <%= f.label :academic, "Academics"%><br>
-    <%= f.select :academic, points, prompt: true %><br><br>
-    <%= f.label :recommend, "Recommendations" %><br>
-    <%= f.select :recommend, points, prompt: true %><br><br>
-    <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %><br>
-    <%= f.select :essay, ten_points, prompt: true %><br><br>
-    <%= f.label :comments, "Comments" %><br>
-    <%= f.text_area :comments %><br><br>
-    <%= f.hidden_field :applicant_id %>
-    <%= f.submit "Submit Scores" %>
-<% end %>
+<div>
+  <%= form_for @score, as: :score, url: score_path do |f| %>
+      <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
+      <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
+      <%= check_box_tag(:mccoy, 1, f.object.mccoy?) %>
+      <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)") %><br><br>
+      <%= f.label :financial, "Financial Need" %><br>
+      <%= f.select :financial, points, selected: @score.financial %><br><br>
+      <%= f.label :academic, "Academics"%><br>
+      <%= f.select :academic, points, selected: @score.academic %><br><br>
+      <%= f.label :recommend, "Recommendations" %><br>
+      <%= f.select :recommend, points, selected: @score.recommend %><br><br>
+      <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %><br>
+      <%= f.select :essay, ten_points, selected: @score.essay.to_s %><br><br>
+      <%= f.label :comments, "Comments" %><br>
+      <%= f.text_area :comments %><br><br>
+      <%= f.hidden_field :applicant_id %>
+      <%= f.submit "Submit Scores" %>
+  <% end %>
+</div>
