--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,9 +1,22 @@
 <h3>Hi, <%= current_user.first_name %>.</h3>
 <br>
-<% if @scores.count == 1%>
-  <p>You have reviewed <%= @scores.count %> application:</p>
+<% if @scores.count == @all_scores_number %>
+  <% flash[:notice] = "Congratulations! You have reviewed all the applicants!" %>
 <% else %>
-  <p>You have reviewed <%= @scores.count %> applications:</p>
+  <% if @scores.count == 1 %>
+    <p>You have reviewed <%= @scores.count %> application:</p>
+  <% else %>
+    <p>You have reviewed <%= @scores.count %> applications:</p>
+  <% end %>
+  <br>
+  <p> Choose from list:</p>
+    <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+      <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+      <%= submit_tag 'Choose' %>
+    <% end %>
+  <br><br>
+  <p>Or</p>
+  <%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get %>
 <% end %>
 <table>
   <% @scores.each do |score| %>
@@ -14,12 +27,3 @@
     </tr>
   <% end %>
 </table>
-<br>
-<p> Choose from list:</p>
-  <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-    <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-    <%= submit_tag 'Choose' %>
-  <% end %>
-<br><br>
-<p>Or</p>
-<%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get %>
