--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -14,6 +14,7 @@
         <p><%= user.first_name %> <%= user.last_name %></p>
     <% end %>
 <% end %>
+<p><%= link_to "Cancel", root_path %></p>
 <p>1. <%= link_to "View their application in a new tab.", @score.applicant.link,  target: :_blank %></p>
 <p>2. Fill out the score fields below.</p>
 <p>3. Press the "submit scores" button</p>
