--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -3,3 +3,81 @@
   flex-direction: column;
   min-height: 100vh;
 }
+
+.home-main {
+  justify-content: center;
+  text-align: center;
+}
+
+.main-section {
+  background-color: rgb(250, 251, 255);
+}
+
+h3 {
+  padding: 1rem;
+  text-align: center;
+  border-top: 1px solid #cfdae2;
+  border-bottom: 1px solid #cfdae2;
+  margin: 3px, 0px, 3px, 0px;
+  color: var(--color-medium-gray)
+}
+
+p {
+  text-align: center;
+}
+
+table, th, td {
+  background-color: rgb(247, 247, 247);
+  outline: 1px solid #000;
+}
+
+table {
+  border-spacing: 5px;
+  width: 100%;
+}
+
+th, td {
+  text-align: center;
+  padding: 0px, 2px, 0px, 2px;
+}
+
+.edit-button {
+  background-color: rgb(214, 214, 214);
+  border: 1px solid var(--color-black);
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.14);
+  outline: none;
+
+  &:active {
+    box-shadow: unset;
+  }
+}
+
+.edit-button:hover {
+  /* link text color disables text color */
+  background-color:rgb(194, 219, 248);
+  color: rgb(210, 209, 219);
+  border: 1px solid var(--color-black);
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.14);
+  outline: none;
+
+  &:active {
+    box-shadow: unset;
+  }
+}
+
+.blue-link-button {
+  justify-content: center;
+}
+
+.blue-link {
+  background-color: rgb(211, 221, 243);
+  text-align: center;
+  border: 1px solid var(--color-black);
+  padding: 2px;
+}
+
+.blue-link:hover {
+  text-decoration: none;
+  background-color: var(--color-dark-blue);
+  color: #fff;
+}
