--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -1,36 +1,36 @@
-<h3>Hi, <%= current_user.first_name %>.</h3>
+<div class="main-section">
+  <h3>Hi, <%= current_user.first_name %>.</h3>
+</div>
 <br>
-<% if @number_of_scores_reviewed == @all_applicants_count %>
+<% if @number_of_scores_reviewed + current_user.removed_applicants.count == @all_applicants_count %>
   <% flash[:notice] = "Congratulations! You have reviewed all the applicants!" %>
+  <p><%= link_to "See Applicants You Have Reviewed", scores_path, class: "blue-link" %></p>
 <% else %>
-  <% if @number_of_scores_reviewed == 1 %>
-    <p>You have reviewed <%= @number_of_scores_reviewed %> application:</p>
-  <% else %>
-    <p>You have reviewed <%= @number_of_scores_reviewed %> applications:</p>
-  <% end %>
-  <% if current_user.removed_applicants.count > 0 %>
-    <% if current_user.removed_applicants.count == 1 %>
-      <p>You have removed <%= current_user.removed_applicants.count %> applicant from your queue.</p>
+  <% if @number_of_scores_reviewed != 0 %>
+    <% if @number_of_scores_reviewed == 1 %>
+      <p>You have reviewed <%= @number_of_scores_reviewed %> application.</p>
     <% else %>
-      <p>You have removed <%= current_user.removed_applicants.count %> applicants from your queue</p>
+      <p>You have reviewed <%= @number_of_scores_reviewed %> applications.</p>
     <% end %>
+    <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
-  <br>
-  <h3>Review Applicants</h3>
-  <h3>____________________________________</h3>
-  <br>
-  <p> Choose from list:</p>
-    <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-      <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-      <%= submit_tag 'Choose' %>
-    <% end %>
-  <br><br>
-  <p>Or</p>
-  <%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get %>
+  <div class="home-main">
+    <br>
+    <div class="main-section">
+      <h3>Review New Applicants</h3>
+    </div>
+    <br>
+    <p> Choose from list:</p>
+      <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+        <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+        <%= submit_tag 'Choose' %>
+      <% end %>
+    <br><br>
+    <p>Or</p>
+    <p><%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get, class: "blue-link" %></p>
+    <br>
+  </div>
 <% end %>
-<h3>____________________________________</h3>
-<br>
-<% if @number_of_scores_reviewed != 0 %>
-  <p><%= link_to "See Applicants You Have Reviewed", scores_path %></p>
-<% end %>
+
+
 
