--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Reviewed</h3>
 <br>
-<table>
+<table class="applicant-table">
   <thead class=table-head>
     <tr>
       <th>First Name</th>
@@ -28,8 +28,8 @@
           <td><%= score.essay %></td>
           <td><%= score.comments %></td>
           <td><%= score.updated_at %></td>
-          <td><%= link_to "Edit", edit_score_path(score) %></td>
-          <td><%= button_to "Delete", score_path(score), method: :delete, confirm: "Are you sure?" %></td>
+          <td class="edit-button"><%= link_to "Edit", edit_score_path(score) %></td>
+          <td class="delete-button"><%= button_to "Delete", score_path(score), method: :delete, confirm: "Are you sure?" %></td>
       </tr>
     </tbody>
   <% end %>
@@ -39,12 +39,6 @@
   <h4>Removed from queue</h4>
   <br>
   <table>
-    <thead class=table-head>
-      <tr>
-        <th>Name</th>
-        <th></th>
-      </tr>
-    </thead>
     <% @removed_applicants.each do |removed_applicant| %>
       <tbody>
         <tr>
