styling changes and select submit alert message

--- a/app/javascript/application/styles/1_settings/variables.css
+++ b/app/javascript/application/styles/1_settings/variables.css
@@ -9,6 +9,7 @@
   --color-teal: #86c1b9;
   --color-light-blue: #7cafc2;
   --color-dark-blue: #04395c;
+  --color-dark-green: #045c1e;
   --color-red: #ab4642;
   --color-green: #a1b56c;
   --color-yellow: #f7ca88;
