--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -11,6 +11,11 @@
 
 .main-section {
   background-color: rgb(250, 251, 255);
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+
 }
 
 h3 {
@@ -18,12 +23,21 @@ h3 {
   text-align: center;
   border-top: 1px solid #cfdae2;
   border-bottom: 1px solid #cfdae2;
-  margin: 3px, 0px, 3px, 0px;
-  color: var(--color-medium-gray)
+  margin: 1rem, 0rem, 1rem, 0rem;
+}
+
+h4 {
+  padding: 0.75rem;
+  text-align: center;
+  border-top: 1px solid #cfdae2;
+  border-bottom: 1px solid #cfdae2;
+  margin: 1rem, 0rem, 1rem, 0rem;
+  background-color: rgb(250, 255, 250);
 }
 
 p {
   text-align: center;
+  /* margin: 2rem, 0rem, 2rem, 0rem; */
 }
 
 table, th, td {
@@ -73,11 +87,27 @@ th, td {
   background-color: rgb(211, 221, 243);
   text-align: center;
   border: 1px solid var(--color-black);
-  padding: 2px;
+  padding: 0.75rem;
+  font-size: 1.14rem;
 }
 
 .blue-link:hover {
   text-decoration: none;
   background-color: var(--color-dark-blue);
+  color: #fff;
+}
+
+.green-link {
+  text-decoration: none;
+  background-color: rgb(211, 243, 216);
+  text-align: center;
+  border: 1px solid var(--color-black);
+  padding: 1rem;
+  font-size: 1.25rem;
+}
+
+.green-link:hover {
+  text-decoration: none;
+  background-color: var(--color-dark-green);
   color: #fff;
 }
