--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -1,5 +1,5 @@
 <div class="main-section">
-  <h3>Hi, <%= current_user.first_name %>.</h3>
+  <h3>Hi, <%= current_user.first_name %>!</h3>
 </div>
 <br>
 <% if @number_of_scores_reviewed + current_user.removed_applicants.count == @all_applicants_count %>
@@ -15,20 +15,17 @@
     <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
   <div class="home-main">
-    <br>
-    <div class="main-section">
-      <h3>Review New Applicants</h3>
-    </div>
-    <br>
-    <p> Choose from list:</p>
+      <div class="main-section">
+        <h4>To Review New Applicants:</h4>
+      </div>
+      <p> Choose from the list:</p>
       <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
         <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-        <%= submit_tag 'Choose' %>
+        <%= submit_tag 'Choose', class: "green-link" %>
       <% end %>
-    <br><br>
-    <p>Or</p>
-    <p><%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get, class: "blue-link" %></p>
-    <br>
+      <br>
+      <p>----- Or -----</p>
+      <p><%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
   </div>
 <% end %>
 
