--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -19,12 +19,14 @@
         <h4>To Review New Applicants:</h4>
       </div>
       <p> Choose from the list:</p>
-      <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-        <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-        <%= submit_tag 'Choose', class: "green-link" %>
-      <% end %>
+      <div class="select-form">
+        <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+          <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+          <%= submit_tag 'Choose', class: "green-link-choose" %>
+        <% end %>
+      </div>
       <br>
-      <p>----- Or -----</p>
+      <p>----- or -----</p>
       <p><%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
   </div>
 <% end %>
