--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -15,19 +15,18 @@
     <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
   <div class="home-main">
-      <div class="main-section">
-        <h4>To Review New Applicants:</h4>
-      </div>
-      <p> Choose from the list:</p>
-      <div class="select-form">
-        <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
-          <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-          <%= submit_tag 'Choose', class: "green-link-choose" %>
-        <% end %>
-      </div>
-      <br>
-      <p>----- or -----</p>
-      <p><%= button_to "Review Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
+    <div class="main-section">
+      <h4>To Review New Applicants:</h4>
+    </div>
+    <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
+    <p>----- or -----</p>
+    <p> Choose from the list:</p>
+    <div class="select-form">
+      <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
+        <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
+        <%= submit_tag 'Choose', class: "green-link-choose" %>
+      <% end %>
+    </div>
   </div>
 <% end %>
 
