--- a/app/views/scores/home.html.erb
+++ b/app/views/scores/home.html.erb
@@ -1,4 +1,4 @@
-<div class="main-section">
+<div class="title-section">
   <h3>Hi, <%= current_user.first_name %>!</h3>
 </div>
 <br>
@@ -15,7 +15,7 @@
     <p><%= link_to "See Applications You Have Reviewed", scores_path, class: "blue-link" %></p>
   <% end %>
   <div class="home-main">
-    <div class="main-section">
+    <div class="title-section">
       <h4>To Review New Applicants:</h4>
     </div>
     <p><%= button_to "Review An Application We Suggest", new_score_path(@applicant), method: :get, class: "green-link" %></p>
@@ -24,7 +24,7 @@
     <div class="select-form">
       <%= form_for @score, url: "/scores/new", method: "get" do |f| %>
         <%= collection_select(:score, :applicant_id, @applicants, :id, :full_name_list, prompt: true) %>
-        <%= submit_tag 'Choose', class: "green-link-choose" %>
+        <%= submit_tag 'Choose', class: "green-link-select" %>
       <% end %>
     </div>
   </div>
