--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -17,6 +17,18 @@
   margin-top: 1.5rem;
 }
 
+.scores-form-div {
+  background-color: rgb(250, 255, 250);
+  padding: 2rem;
+  font-size: 1.5rem;
+  border-top: 1px solid #cfdae2;
+  border-bottom: 1px solid #cfdae2;
+}
+
+.scores-form {
+  /* justify-content: center; */
+}
+
 .select-form {
   padding: 0.5rem;
   border: 1px solid var(--color-black);
@@ -42,6 +54,7 @@ h4 {
 
 p {
   text-align: center;
+  font-size: 1.5rem;
 }
 
 li {
@@ -141,4 +154,8 @@ th, td {
 
 .new-link {
   font-size: 1.5rem;
+}
+
+.submit-scores {
+  margin: auto;
 }
