--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -5,7 +5,7 @@
     </div>
   <% end %>
 <% end %>
-<p>Here is your applicant:</p>
+<p>Your applicant is:</p>
 <div class="title-section">
   <h3><%= @applicant.first_name %> <%= @applicant.last_name %></h3>
 </div>
@@ -14,24 +14,26 @@
   <li>Fill out the score fields below.</li>
   <li>Press the "submit scores" button</li>
 </ol>
-<%= form_for(@score) do |f| %>
-  <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
-  <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
-  <%= check_box_tag(:mccoy) %>
-  <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)") %><br><br>
-  <%= f.label :financial, "Financial Need" %><br>
-  <%= f.select :financial, points, prompt: true %><br><br>
-  <%= f.label :academic, "Academics"%><br>
-  <%= f.select :academic, points, prompt: true %><br><br>
-  <%= f.label :recommend, "Recommendations" %><br>
-  <%= f.select :recommend, points, prompt: true %><br><br>
-  <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %><br>
-  <%= f.select :essay, ten_points, prompt: true %><br><br>
-  <%= f.label :comments, "Comments" %><br>
-  <%= f.text_area :comments %><br><br>
-  <%= f.hidden_field :applicant_id %>
-  <%= f.submit "Submit Scores" %>
-<% end %>
+<div class="scores-form-div">
+  <%= form_for(@score, html: { class: "scores-form" }) do |f| %>
+    <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
+    <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
+    <%= check_box_tag(:mccoy) %>
+    <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)") %><br><br>
+    <%= f.label :financial, "Financial Need" %><br>
+    <%= f.select :financial, points, prompt: true %><br><br>
+    <%= f.label :academic, "Academics"%><br>
+    <%= f.select :academic, points, prompt: true %><br><br>
+    <%= f.label :recommend, "Recommendations" %><br>
+    <%= f.select :recommend, points, prompt: true %><br><br>
+    <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %><br>
+    <%= f.select :essay, ten_points, prompt: true %><br><br>
+    <%= f.label :comments, "Comments" %><br>
+    <%= f.text_area :comments %><br><br>
+    <%= f.hidden_field :applicant_id %>
+    <%= f.submit "Submit Scores", class: "green-link submit-scores" %>
+  <% end %>
+</div>
 <p><%= link_to "Cancel This Review", root_path %></p>
 <p>----- or ------</p>
 <p><%= link_to "Cancel and Remove Them From My Queue", removed_applicants_create_path(@applicant) %></p>
