--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -10,28 +10,36 @@
   <h3><%= @applicant.first_name %> <%= @applicant.last_name %></h3>
 </div>
 <ol class="list-items">
-  <li><%= link_to "View their application in a new tab.", @applicant.link,  target: :_blank, class: "blue-link new-link" %></li>
-  <li>Fill out the score fields below.</li>
-  <li>Press the "submit scores" button</li>
+  <li>1. <%= link_to "View their application in a new tab.", @applicant.link,  target: :_blank, class: "blue-link new-link" %></li>
+  <li>2. Fill out the score fields below.</li>
+  <li>3. Press the "submit scores" button</li>
 </ol>
 <div class="scores-form-div">
   <%= form_for(@score, html: { class: "scores-form" }) do |f| %>
     <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
     <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
-    <%= check_box_tag(:mccoy) %>
-    <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)") %><br><br>
-    <%= f.label :financial, "Financial Need" %><br>
-    <%= f.select :financial, points, prompt: true %><br><br>
-    <%= f.label :academic, "Academics"%><br>
-    <%= f.select :academic, points, prompt: true %><br><br>
-    <%= f.label :recommend, "Recommendations" %><br>
-    <%= f.select :recommend, points, prompt: true %><br><br>
-    <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %><br>
-    <%= f.select :essay, ten_points, prompt: true %><br><br>
-    <%= f.label :comments, "Comments" %><br>
-    <%= f.text_area :comments %><br><br>
-    <%= f.hidden_field :applicant_id %>
-    <%= f.submit "Submit Scores", class: "green-link submit-scores" %>
+    <p><%= check_box_tag("mccoy-checkbox") %>&nbsp&#x2B05
+    <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %></p>
+    <p class="form-selector">
+      <%= f.label :financial, "Financial Need" %>
+      <%= f.select :financial, points, prompt: true, class: "form-selector-label" %>
+    </p>
+    <p class="form-selector">
+      <%= f.label :academic, "Academics"%>
+      <%= f.select :academic, points, prompt: true %>
+    </p>
+    <p class="form-selector">
+      <%= f.label :recommend, "Recommendations" %>
+      <%= f.select :recommend, points, prompt: true %>
+    </p>
+    <p class="form-selector">
+      <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %>
+      <%= f.select :essay, ten_points, prompt: true %>
+    </p>
+    <p><%= f.label :comments, "Comments" %></p>
+    <p><%= f.text_area :comments, class: "text-area" %></p>
+    <p><%= f.hidden_field :applicant_id %></p>
+    <p><%= f.submit "Submit Scores", class: "green-link" %></p>
   <% end %>
 </div>
 <p><%= link_to "Cancel This Review", root_path %></p>
