--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -11,30 +11,33 @@
 </div>
 <ol class="list-items">
   <li>1. <%= link_to "View their application in a new tab.", @applicant.link,  target: :_blank, class: "blue-link new-link" %></li>
-  <li>2. Fill out the score fields below.</li>
+  <li>2. Fill out the Scores Form below.</li>
   <li>3. Press the "submit scores" button</li>
 </ol>
 <div class="scores-form-div">
+  <h2 id="scores-form-title">Scores Form</h2>
   <%= form_for(@score, html: { class: "scores-form" }) do |f| %>
     <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
     <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
-    <p><%= check_box_tag("mccoy-checkbox") %>&nbsp&#x2B05
-    <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %></p>
+    <p>
+      <%= check_box_tag("mccoy-checkbox") %>&nbsp&nbsp&nbsp&#x2B05
+      <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %>
+    </p>
     <p class="form-selector">
-      <%= f.label :financial, "Financial Need" %>
       <%= f.select :financial, points, prompt: true, class: "form-selector-label" %>
+      &nbsp<%= f.label :financial, "Financial Need" %>
     </p>
     <p class="form-selector">
-      <%= f.label :academic, "Academics"%>
       <%= f.select :academic, points, prompt: true %>
+      &nbsp<%= f.label :academic, "Academics"%>
     </p>
     <p class="form-selector">
-      <%= f.label :recommend, "Recommendations" %>
       <%= f.select :recommend, points, prompt: true %>
+      &nbsp<%= f.label :recommend, "Recommendations" %>
     </p>
     <p class="form-selector">
-      <%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %>
       <%= f.select :essay, ten_points, prompt: true %>
+      &nbsp<%= f.label :essay, "Essay/Personal/Extra-curricular/Intangible" %>
     </p>
     <p><%= f.label :comments, "Comments" %></p>
     <p><%= f.text_area :comments, class: "text-area" %></p>
