new page styling first pass complete

--- a/app/javascript/application/styles/1_settings/variables.css
+++ b/app/javascript/application/styles/1_settings/variables.css
@@ -11,6 +11,7 @@
   --color-dark-blue: #04395c;
   --color-dark-green: #045c1e;
   --color-red: #ab4642;
+  --color-dark-red: #4e0502;
   --color-green: #a1b56c;
   --color-yellow: #f7ca88;
   --color-orange: #dc9656;
