--- a/app/javascript/application/styles/4_layout/body.css
+++ b/app/javascript/application/styles/4_layout/body.css
@@ -21,8 +21,8 @@
   background-color: rgb(250, 255, 250);
   padding: 2rem;
   font-size: 1.5rem;
-  border-top: 3px solid #9db39e;
-  border-bottom: 3px solid #9db39e;
+  border-top: 2px solid var(--color-dark-gray);
+  border-bottom: 2px solid var(--color-dark-gray);
 }
 
 .scores-form {
@@ -34,7 +34,7 @@
 }
 
 .scores-form-div > * {
-  padding: 3rem;
+  padding: 1.5rem;
 }
 
 #scores-form-title {
@@ -207,7 +207,34 @@ th, td {
 }
 
 .text-area {
-  padding: 4rem;
+  width: 36rem;
+  height: 7rem;
+}
+.cancel-buttons-div {
+  margin: 4em 0 2em 0;
 }
 
+.red-link {
+  text-decoration: none;
+  color: var(--color-black);
+  background-color: rgb(243, 211, 211);
+  border: 1px solid var(--color-black);
+  padding: 0.75rem;
+  font-size: 1.14rem;
+}
 
+.red-link:hover {
+  text-decoration: none;
+  background-color: var(--color-dark-red);
+  color: #fff;
+}
+
+.reviewed-by-text {
+  margin-top: 1rem;
+  /* border-bottom: 2px solid var(--color-dark-gray); */
+}
+
+.reviewed-by-text > * {
+  text-align: center;
+  font-size: 1.5rem;
+}
