--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -15,12 +15,12 @@
   <li>3. Press the "submit scores" button</li>
 </ol>
 <div class="scores-form-div">
-  <h2 id="scores-form-title">Scores Form</h2>
+  <h2 class="scores-form-title">Scores Form</h2>
   <%= form_for(@score, html: { class: "scores-form" }) do |f| %>
     <% points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0] %>
     <% ten_points = [0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0] %>
     <p>
-      <%= check_box_tag("mccoy-checkbox") %>&nbsp&nbsp&nbsp&#x2B05
+      <%= check_box_tag(:mccoy, "1", false, class: "mccoy-checkbox") %>&nbsp&nbsp&nbsp&#x2B05
       <%= label_tag(:mccoy, "Eligible for McCoy Scholarship (hemophilia A, severe)", class: "checkboxtext") %>
     </p>
     <p class="form-selector">
